--- a/content/blogs/gsoc-blog-compilation.mdx
+++ b/content/blogs/gsoc-blog-compilation.mdx
@@ -6,7 +6,7 @@ longDescription: This is a weekwise snapshot of my work at StingraySoftware duri
 cardImage: "https://staging-jubilee.flickr.com/65535/49707414291_871a8a081a_q.jpg"
 tags: ["code", "python", "astropy", "numpy", "stingray", "open source"]
 readTime: 45
-featured: False
+featured: true
 timestamp: 2025-07-21T02:39:03+05:30
 ---
 
