Big Beautiful Rework

--- a/content/projects/eicl.mdx
+++ b/content/projects/eicl.mdx
@@ -1,5 +1,5 @@
 ---
-title: Efficiency is Clever Laziness
+title: Efficiency is Clever Laziness (Work In Progress)
 slug: eicl
 description: A batteries & kitchen sink included process & system monitor and benchmarking tool
 longDescription: A batteries & kitchen sink included process & system monitor and benchmarking tool
@@ -7,7 +7,7 @@ cardImage: "https://staging-jubilee.flickr.com/65535/49707414291_871a8a081a_q.jp
 tags: ["golang", "open-source", "eBPF", "CUDA", "C"]
 githubUrl: https://github.com/cogatimus/eicl
 timestamp: 2025-07-22T17:30:00+05:30
-featured: true
+featured: false
 ---
 
 Me and my friends at Cogatimus are currently working on a swiss army knife of a tool meant for software engineers, system testers, performance nerds and servers.
@@ -21,6 +21,8 @@ EICL is a fast, modular, and lightweight system profiler and benchmarking suite 
 
 > Think perf, but cross-platform. Think htop, but smarter. Think flame graphs, call trees, treemaps, and daemonized insights — all in one place.
 
+---
+
 ## 🚀 Vision
 
 EICL will eventually support all major operating systems and platforms, starting with:
@@ -28,6 +30,8 @@ EICL will eventually support all major operating systems and platforms, starting
 - ✅ Linux
 - ✅ Windows
 - ⏳ macOS, BSD, and others (planned)
+
+---
 
 ## Short and Long-term goals include
 
@@ -39,6 +43,8 @@ EICL will eventually support all major operating systems and platforms, starting
 - Rich visualization (flame graphs, sunburst diagrams, treemaps, etc.)
 - Daemon mode for continuous service/application monitoring
 - CLI-first
+
+---
 
 ## 🛠️ Tech Stack
 
