--- a/content/projects/hacktoberfest.mdx
+++ b/content/projects/hacktoberfest.mdx
@@ -5,6 +5,7 @@ description: A registration and problem statement picker website for CBIT Hackto
 longDescription: A website for the CBIT Hacktoberfest Hackathon which had registration and problem statement selection with a Firebase RTDB backend.
 cardImage: "https://staging-jubilee.flickr.com/65535/49707414291_871a8a081a_q.jpg"
 tags: ["Next.js", "Firebase", "open-source", "Realtime Database"]
+liveDemoUrl: "https://hacktoberfest-2023.vercel.app"
 githubUrl: https://github.com/pupperemeritus/hacktoberfest-2023
 timestamp: 2025-07-21T17:30:00+05:30
 featured: true
@@ -28,6 +29,8 @@ My contributions to the project were
 3. I came up with the idea of a horizontally scrolling timeline which was then brought to life by my teammate Sai Kiran.
 4. Implementing FAQ Section.
 5. Miscellaneous styling across components.
+
+---
 
 ## Tech Stack
 
