--- a/content/projects/lfss.mdx
+++ b/content/projects/lfss.mdx
@@ -2,7 +2,7 @@
 title: Lexical Fuzzy Semantic Search (EE-ONE-D)
 slug: lfss
 description: A text search tool for fuzzier document search experience
-longDescription: EE-ONE-D is a text search tool designed to enable fuzzier searching.
+longDescription: EE-ONE-D is a text search tool designed to enable fuzzier searching
 cardImage: "https://staging-jubilee.flickr.com/65535/49707414291_871a8a081a_q.jpg"
 tags: ["text search", "semantic search", "open-source", "vector database"]
 githubUrl: https://github.com/cogatimus/EE-ONE-D
