--- a/content/projects/lombscarglefouriertransform.mdx
+++ b/content/projects/lombscarglefouriertransform.mdx
@@ -1,8 +1,8 @@
 ---
 title: Astronomy Using Unevenly Sampled Data
 slug: ausd
-description: An implementation of the Lomb Scargle Fourier Transform, Cross Spectrum and Power Spectrum.
-longDescription: EE-ONE-D is a sophisticated text analysis and search system designed to find more than.
+description: An implementation of the Lomb Scargle Fourier Transform, Cross Spectrum and Power Spectrum
+longDescription: An implementation of the Lomb Scargle Fourier Transform, Cross Spectrum and Power Spectrum
 cardImage: "https://staging-jubilee.flickr.com/65535/49707414291_871a8a081a_q.jpg"
 tags: ["fourier", "spectral timing", "open-source", "scientific compute"]
 githubUrl: https://github.com/StingraySoftware/stingray/pull/737
