Content addition and update

--- a/content/experiences/gsoc.mdx
+++ b/content/experiences/gsoc.mdx
@@ -8,7 +8,7 @@ endMonthYear: September 2023
 cardImage: "https://staging-jubilee.flickr.com/65535/49707414291_871a8a081a_q.jpg"
 tags: ["stingray", "time series", "space", "math"]
 timestamp: 2023-09-24T17:34:00+05:30
-featured: false
+featured: true
 ---
 
 ### Work Experience Summary
