Minor edit to docscraper

--- a/content/projects/docscraper.mdx
+++ b/content/projects/docscraper.mdx
@@ -4,17 +4,17 @@ slug: docscraper
 description: A tool to scrape documentation and other knowledge bases
 longDescription: A tool to scrape documentation and other knowledge bases
 cardImage: "https://staging-jubilee.flickr.com/65535/49707414291_871a8a081a_q.jpg"
-tags: ["cnn", "deep learning", "competition"]
+tags: ["crawler", "document conversion", "web scraping"]
 githubUrl: "https://www.github.com/pupperemeritus/doscraper"
 timestamp: 2025-07-21T17:30:00+05:30
 featured: true
 ---
 
-This project is a sophisticated command-line tool engineered specifically for creating high-fidelity, offline archives of documentation websites. It moves beyond basic web scraping by integrating intelligent features that prioritize the quality, structure, and relevance of the final output.
+This project is a command-line tool engineered specifically for creating high-fidelity, offline archives of documentation websites. It moves beyond basic web scraping by integrating intelligent features that prioritize the quality, structure, and relevance of the final output.
 
 ---
 
-### Key Differentiators: Beyond a Simple Scraper
+### Key Differentiator
 
 What truly sets this project apart is its focus on creating a clean and navigable knowledge base, not just a folder of downloaded files.
 
